--- a/src/CNN/index.html
+++ b/src/CNN/index.html
@@ -18,8 +18,7 @@
 
     <div class="row justify-content-center mt-4">
         <div class="col-md-8">
-            <form method="post">
-                <div class="input-group mb-3">
+            <form action="http://127.0.0.1:8000/prediction" method="post">                <div class="input-group mb-3">
                     <input type="text" name="text" class="form-control" placeholder="Entrez une phrase en Occitan" required>
                     <button class="btn btn-primary" type="submit">Analyser</button>
                 </div>
